# immortal-mcp

./: pyproject.toml
docs/: developer.md  user.md
immortal_mcp/: __init__.py  __main__.py  cli.py  downstream.py  idle.py  proxy.py
issues/: 001-core-proxy.md  002-reconnect.md  003-idle-disconnect.md  004-cli.md  005-status-notifications.md  README.md
tests/: conftest.py  test_api.py  test_cli.py  test_downstream.py  test_idle.py  test_integration.py  test_proxy.py  test_transport.py
