[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immortal-mcp"
version = "0.1.0"
description = "A resilient MCP proxy that transparently wraps another MCP server with automatic reconnection"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0",
]

[project.scripts]
immortal-mcp = "immortal_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["immortal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
